argo-ingress/1-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 1-example

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: 1-example
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: gcr.io/kubernetes-e2e-test-images/echoserver
          name: echoserver
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: 1-example
spec:
  ports:
    - port: 80
      targetPort: 8000 # Corrected targetPort
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: 1-example
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0ee19fd4c304cb3b6 , subnet-08d6e9dd222d4b758
spec:
  ingressClassName: alb
  rules:
    - host: echo.staging.beamstudio.ai
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
